[gd_scene load_steps=12 format=2]

[ext_resource path="res://Scripts/patientNotes.gd" type="Script" id=1]
[ext_resource path="res://Themes/subscreens.tres" type="Theme" id=2]
[ext_resource path="res://Graphics/UI/Notes.png" type="Texture" id=3]
[ext_resource path="res://Graphics/UI/baseDataContainer2.png" type="Texture" id=4]
[ext_resource path="res://Fonts/Nunito_regular16.font" type="BitmapFont" id=5]
[ext_resource path="res://Fonts/Nunito_regular28.font" type="BitmapFont" id=6]
[ext_resource path="res://Graphics/UI/notesTextureButton.png" type="Texture" id=7]
[ext_resource path="res://Fonts/Nunito_extra_bold20.font" type="BitmapFont" id=8]

[sub_resource type="StyleBoxEmpty" id=1]

content_margin_left = -1.0
content_margin_right = -1.0
content_margin_top = -1.0
content_margin_bottom = -1.0

[sub_resource type="StyleBoxTexture" id=2]

content_margin_left = -1.0
content_margin_right = -1.0
content_margin_top = -1.0
content_margin_bottom = -1.0
texture = ExtResource( 7 )
region_rect = Rect2( 0, 0, 30, 469 )
margin_left = 5.0
margin_right = 20.0
margin_top = 20.0
margin_bottom = 20.0
expand_margin_left = 0.0
expand_margin_right = 0.0
expand_margin_top = 0.0
expand_margin_bottom = 0.0
modulate_color = Color( 0.535156, 0.535156, 0.535156, 1 )
draw_center = true
_sections_unfolded = [ "Expand Margin", "Margin", "Modulate" ]

[sub_resource type="StyleBoxTexture" id=3]

content_margin_left = -1.0
content_margin_right = -1.0
content_margin_top = -1.0
content_margin_bottom = -1.0
texture = ExtResource( 7 )
region_rect = Rect2( 0, 0, 30, 469 )
margin_left = 5.0
margin_right = 20.0
margin_top = 20.0
margin_bottom = 20.0
expand_margin_left = 0.0
expand_margin_right = 0.0
expand_margin_top = 0.0
expand_margin_bottom = 0.0
modulate_color = Color( 0.371094, 0.369644, 0.369644, 1 )
draw_center = true
_sections_unfolded = [ "Expand Margin", "Margin", "Modulate" ]

[node name="notes" type="Node" index="0"]

script = ExtResource( 1 )

[node name="NinePatchRect" type="NinePatchRect" parent="." index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 1.0
margin_left = -3.0
margin_top = 2.0
margin_right = 620.0
margin_bottom = -197.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
theme = ExtResource( 2 )
texture = ExtResource( 3 )
patch_margin_left = 20
patch_margin_top = 20
patch_margin_right = 20
patch_margin_bottom = 20
_sections_unfolded = [ "Mouse", "Patch Margin", "Rect", "Theme" ]

[node name="NinePatchRect2" type="NinePatchRect" parent="NinePatchRect" index="0"]

self_modulate = Color( 0.898438, 0.898438, 0.898438, 1 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 25.0
margin_top = 77.0
margin_right = 398.0
margin_bottom = 482.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 4 )
patch_margin_left = 20
patch_margin_top = 20
patch_margin_right = 20
patch_margin_bottom = 20
_sections_unfolded = [ "Patch Margin", "Visibility" ]

[node name="TextEdit" type="TextEdit" parent="NinePatchRect/NinePatchRect2" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 15.0
margin_top = 16.0
margin_right = -16.0
margin_bottom = -15.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_styles/normal = SubResource( 1 )
custom_colors/caret_color = Color( 0.355469, 0.355469, 0.355469, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/current_line_color = Color( 0.898438, 0.898438, 0.898438, 1 )
text = ""
readonly = false
highlight_current_line = false
syntax_highlighting = false
show_line_numbers = false
highlight_all_occurrences = false
override_selected_font_color = false
context_menu_enabled = true
smooth_scrolling = false
v_scroll_speed = 80.0
hiding_enabled = 0
wrap_lines = false
caret_block_mode = false
caret_blink = false
caret_blink_speed = 0.65
caret_moving_by_right_click = true
_sections_unfolded = [ "custom_colors", "custom_styles" ]

[node name="DiffsScreen" type="Container" parent="NinePatchRect/NinePatchRect2" index="1"]

editor/display_folded = true
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
_sections_unfolded = [ "Visibility" ]

[node name="LineEdit" type="LineEdit" parent="NinePatchRect/NinePatchRect2/DiffsScreen" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 0.0
margin_left = 11.0
margin_top = 15.0
margin_right = -13.0
margin_bottom = 39.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 1
size_flags_horizontal = 1
size_flags_vertical = 1
focus_mode = 2
context_menu_enabled = true
placeholder_text = "Search..."
placeholder_alpha = 0.6
caret_blink = false
caret_blink_speed = 0.65
caret_position = 0
_sections_unfolded = [ "Placeholder" ]

[node name="ScrollContainer" type="ScrollContainer" parent="NinePatchRect/NinePatchRect2/DiffsScreen" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 11.0
margin_top = 53.0
margin_right = 359.0
margin_bottom = 361.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = true
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
scroll_horizontal_enabled = true
scroll_horizontal = 0
scroll_vertical_enabled = true
scroll_vertical = 0

[node name="VBoxContainer" type="VBoxContainer" parent="NinePatchRect/NinePatchRect2/DiffsScreen/ScrollContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 348.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 2
alignment = 0
_sections_unfolded = [ "Size Flags" ]

[node name="DoneButton" type="Button" parent="NinePatchRect/NinePatchRect2/DiffsScreen" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 12.0
margin_top = 369.0
margin_right = 359.0
margin_bottom = 396.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = ExtResource( 5 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Done"
flat = false
align = 1
_sections_unfolded = [ "custom_fonts" ]

[node name="NinePatchRect3" type="NinePatchRect" parent="NinePatchRect" index="1"]

editor/display_folded = true
self_modulate = Color( 0.898438, 0.898438, 0.898438, 1 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 414.0
margin_top = 80.0
margin_right = 582.0
margin_bottom = 267.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 4 )
patch_margin_left = 20
patch_margin_top = 20
patch_margin_right = 20
patch_margin_bottom = 20
_sections_unfolded = [ "Patch Margin", "Visibility" ]

[node name="Label" type="Label" parent="NinePatchRect/NinePatchRect3" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 12.0
margin_top = 16.0
margin_right = 106.0
margin_bottom = 30.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_colors/font_color = Color( 0.183594, 0.183594, 0.183594, 1 )
text = "Investigations:"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_colors" ]

[node name="DifferentialsPatch" type="NinePatchRect" parent="NinePatchRect" index="2"]

self_modulate = Color( 0.898438, 0.898438, 0.898438, 1 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 414.0
margin_top = 292.0
margin_right = 582.0
margin_bottom = 477.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 4 )
patch_margin_left = 20
patch_margin_top = 20
patch_margin_right = 20
patch_margin_bottom = 20
_sections_unfolded = [ "Patch Margin", "Visibility" ]

[node name="Label" type="Label" parent="NinePatchRect/DifferentialsPatch" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 12.0
margin_top = 12.0
margin_right = 94.0
margin_bottom = 27.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_colors/font_color = Color( 0.183594, 0.183594, 0.183594, 1 )
text = "Differentials:"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_colors" ]

[node name="Edit" type="Button" parent="NinePatchRect/DifferentialsPatch" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 109.0
margin_top = 8.0
margin_right = 159.0
margin_bottom = 35.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 0.3125, 0.3125, 0.3125, 1 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Edit"
flat = false
align = 1
_sections_unfolded = [ "custom_colors", "custom_constants", "custom_fonts" ]

[node name="LabelAdds" type="ScrollContainer" parent="NinePatchRect/DifferentialsPatch" index="2"]

editor/display_folded = true
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 41.0
margin_right = -10.0
margin_bottom = -10.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = true
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
scroll_horizontal_enabled = true
scroll_horizontal = 0
scroll_vertical_enabled = true
scroll_vertical = 0
_sections_unfolded = [ "Grow Direction", "Margin" ]

[node name="VBoxContainer" type="VBoxContainer" parent="NinePatchRect/DifferentialsPatch/LabelAdds" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 148.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 1
alignment = 0
_sections_unfolded = [ "Size Flags" ]

[node name="EditDiffs" type="ScrollContainer" parent="NinePatchRect/DifferentialsPatch" index="3"]

editor/display_folded = true
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 41.0
margin_right = -10.0
margin_bottom = -10.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = true
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
scroll_horizontal_enabled = true
scroll_horizontal = 0
scroll_vertical_enabled = true
scroll_vertical = 0
_sections_unfolded = [ "Grow Direction", "Margin" ]

[node name="VBoxContainer" type="VBoxContainer" parent="NinePatchRect/DifferentialsPatch/EditDiffs" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 148.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 1
alignment = 0
_sections_unfolded = [ "Size Flags" ]

[node name="Label" type="Label" parent="NinePatchRect" index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 25.0
margin_top = 26.0
margin_right = 198.0
margin_bottom = 54.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color = Color( 0.769531, 0.769531, 0.769531, 1 )
text = "Patient Notes"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_colors", "custom_fonts" ]

[node name="Button" type="Button" parent="NinePatchRect" index="4"]

anchor_left = 1.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -30.0
margin_top = 5.0
margin_right = 16.0
margin_bottom = -5.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 3 )
custom_styles/normal = SubResource( 3 )
toggle_mode = true
enabled_focus_mode = 0
shortcut = null
group = null
flat = false
align = 1
_sections_unfolded = [ "Grow Direction", "Margin", "Visibility", "custom_styles" ]

[node name="Label" type="Label" parent="NinePatchRect/Button" index="0"]

anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -11.0
margin_top = 14.5
margin_right = 45.0
margin_bottom = 35.5
rect_rotation = -90.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = ExtResource( 8 )
custom_colors/font_color = Color( 0.207031, 0.207031, 0.207031, 1 )
text = "Notes"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Rect", "custom_colors", "custom_fonts" ]


